--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html, body{
     width: 66px;
     color: rgb(15, 6, 15);
     background-color: rgb(28, 218, 145);
+    background: linear-gradient(#22a9e3 ,#e9e036,#1def39);
     border: 2px solid black;
     border-radius: 9px;
     cursor: pointer;
