--- a/utils.css
+++ b/utils.css
@@ -1,11 +1,11 @@
 .text-center{
     text-align: center;
-    background-color: blue;
+    background:  linear-gradient(#22a9e3 ,#e9e036,#1def39);
     padding: 3px 5px;
     margin: 3px;
 }
 .bg-red{
-    background: rgb(197, 230, 122); 
+    background:linear-gradient(to bottom, #d16ba5, #c276bd, #ad83d1, #9290df, #729be7, #5aa7ee, #3eb3f2, #1fbef2, #03cef6, #1adef7, #3dedf5, #5ffbf1); 
 }
 .mx-auto{
     margin: auto;
